# tauri-screenshot

./: .gitignore  README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
