[package]
name = "tarui-screen"
version = "1.0.0"
description = "A Tauri app with two windows"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[package.metadata.tauri]
icon = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.icns", "icons/icon.ico"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "tray-icon", "webview-data-url"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
base64 = "0.22"
mime_guess = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
